@@ -1,15 +1,14 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-EBUILD emacs-vcs-23.3.9999.ebuild 10479 RMD160 d8d6039df9cc8474d6f9a07db58ca36d663ddd23 SHA1 4e2428c8906ade6d5d0a6a3cdf51b2a3e734caef SHA256 7905fdae21c51ffcf7f5dc6984e6d82fbad7161299078a26ccb63afdcc0c6d0a
-EBUILD emacs-vcs-24.0.9999-r1.ebuild 10586 RMD160 272e292b8bd8caecc0600eb4eaa15f1196418f1f SHA1 f8662ebfa6f37abc4606b010819cfc8f42ec1989 SHA256 b115cede392560400b906232f8369546254b295b0f6b63af722394525b47df79
-EBUILD emacs-vcs-24.0.9999-r2.ebuild 10612 RMD160 7fd5a1385108d03be8c8cb026aac2ccd2962293a SHA1 fe12395374f016c3e39457b391111e3a2cab3cac SHA256 2e879bcb52cbef733d34518e2e7e31bb169beffb03a61bb01c26ba851a7d2f87
-MISC ChangeLog 2822 RMD160 59714ff2133f3839cd24360506840e7265a77f3c SHA1 b9357e60c09698fafc8ae32d3ce928144524eb70 SHA256 2e4f76146bb9d58370e8de2b72cde939ad1445c7b503cbc0c40be77ba97475d1
+EBUILD emacs-vcs-23.3.9999.ebuild 10439 RMD160 97bc213e09f3d3ab36bb2b75f0a87a95db835976 SHA1 9f99a71de87e7da5be80207593ac6fbd79581f30 SHA256 c11a8e1807c04fd48de8bd20b77d682e708a29a8e3cee7af8657ad8223381c04
+EBUILD emacs-vcs-24.0.9999-r1.ebuild 10524 RMD160 7d614f0cfcf4a93f74fd0e666c6c5d7a8d62c751 SHA1 1b7871039ad22b4492be3373e6b53bbb21a97d0f SHA256 d0bd27b50cb5e89c8deff8546ee9ed03d30514e81e1bf0cf314b42e45a60c979
+MISC ChangeLog 3037 RMD160 df670e4421affad28c389b1f8c73188898b35c20 SHA1 c350388f640fc8f89990b35313dcdcfce35f3a4e SHA256 7bab5a0ac1caacc4c2465a00058c01e4c19a7d771a010f9c7a1197d8584a6df1
 MISC metadata.xml 1801 RMD160 606c780a3e86f485699157f14a35ca0e5da1d3c2 SHA1 05839ee25c6f6389e8eb80d783df895d59600a90 SHA256 bdc233a1795f52900dbe4d0a39c0e56d4eb5ba1c4842b9c46bae47f7052d5d74
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEARECAAYFAk17bdQACgkQOeoy/oIi7uyxYACeLX4ihllZg0QkY9oryaxhf5vh
-RkAAmQFHnHn3FD07e8U/yUyMaDJ6MyLE
-=q61z
+iEYEARECAAYFAk2EeaUACgkQOeoy/oIi7uxrYgCeJeDd/ZPTpJ9aIGl+DqNpuSqW
+JFAAoMyd1p0VE+dWIqyKh70sGCtY2lFL
+=kD9t
 -----END PGP SIGNATURE-----
